# backend/app/helper/validator.py
@@ -34,4 +34,16 @@ def add_billing() -> dict:
         abort(400, {'errors': e.messages})
     except FieldDoesNotExist:
         abort(400, {'error': 'Request is missing required fields'})
-  
+
+
+def add_dashboard() -> dict:
+    '''
+    Validation for dashboard serialized
+    '''
+    try:
+        serialized_payload = schema.DashboardSchema().load(request.get_json())
+        return serialized_payload
+    except ValidationError as e:
+        abort(400, {'errors': e.messages})
+    except FieldDoesNotExist:
+        abort(400, {'error': 'Request is missing required fields'})
