# backend/app/route/course.py
@@ -1,6 +1,6 @@
 from flask import Blueprint
 from flask_restful import Api
-from resource.course import CourseAPI, CourseListAPI, BillingAPI, BillingListAPI
+from resource.course import CourseAPI, CourseListAPI, BillingAPI, BillingListAPI, DashboardAPI, DashboardListAPI
 
 
 course_blueprint = Blueprint("course_api", __name__)
@@ -8,6 +8,9 @@ course_blueprint_api = Api(course_blueprint)
 
 billing_blueprint = Blueprint("billing_api", __name__)
 billing_blueprint_api = Api(billing_blueprint)
+
+dashboard_blueprint = Blueprint("dashboard_api", __name__)
+dashboard_blueprint_api = Api(dashboard_blueprint)
 
 course_blueprint_api.add_resource(
     CourseAPI, "/courses/<string:course_id>"
@@ -23,4 +26,10 @@ billing_blueprint_api.add_resource(
 billing_blueprint_api.add_resource(
     BillingAPI, "/billings/<string:billing_id>"
 )
+dashboard_blueprint_api.add_resource(
+    DashboardListAPI, "/dashboard"
+)
 
+dashboard_blueprint_api.add_resource(
+    DashboardAPI, "/dashboard/<string:dashboard_id>"
+)
